--- a/app/src/main/res/layout-land/activity_demo.xml
+++ b/app/src/main/res/layout-land/activity_demo.xml
@@ -38,6 +38,13 @@
         android:layout_gravity="bottom|left"
         android:src="@drawable/arrow_left" />
 
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="@string/cheat_button" />
+
     <ImageButton
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
