--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="button_font_size">30sp</dimen>
+    <dimen name="button_height">75dp</dimen>
 </resources>
